--- a/index.qmd
+++ b/index.qmd
@@ -103,7 +103,8 @@ qmd_files_with_html <- qmd_files[sapply(qmd_files, function(file) {
 
 is_null <- function(d) {
   if (is.null(d)) {
-    return("3000-01-01")
+    # return("3000-01-01")
+    return(character())
   } else {
     return(d)
   }
